...
            }
        default:
            VStack {
                HStack {
                    
                    Button(action:  { $roomState.wrappedValue = .About }) {
                        Text("About")
                    }
                    Spacer()
                    DatePicker(
                      "Birthdate",
                      selection: $birthdate,
                      displayedComponents: .date
                    ).datePickerStyle(DefaultDatePickerStyle())
                    Button(action: pickedDate) {
                        Text("Go").font(.title)
                    }
                }
                /*
                if case .Reading(let planet, let sign) = sunData
                {
                    Text("\(planet.getName()) in \(sign.getName())").font(.headline)
...
