...
                }))
                
                Button(action: {
                    setSelectedNameData()
                    roomState.wrappedValue = .EditName(onDismiss: .Chart)
                }) {
                    Text("Edit").font(.headline).padding([.leading, .trailing]).selectedNameColor()
                }
            }
            
        } else {
            Text("No selection")
        }
...
