...
                    .tabItem {
                        Text("Mars Room")
                    }
                    .tag(AppTab.MarsTab.rawValue)
                ChartTab()
                    .tabItem {
                    Text("Charts")
                    }
                    .tag(AppTab.ChartTab.rawValue)
                .environmentObject(birthDataManager)
                .environment(\.roomState, $roomState)
                PlanetsTab()
                    .tabItem {
...
